Add React adapter to Fractal instance (#3)
* Updates

* New files

* Cleanup, switch back to regular react adapter

* Remove outdated packages, use yarn

* Remove unused file

* Actual cleanup

* remove last loader

* Remove file, clear cache in adapter

* Add babelrc back

* Add autodoc

* Keep from breaking other output

* Better org for prop generation

* Move things around, working webpack thingy

* Remove old webpack adapter

--- a/src/components/_uswds.njk
+++ b/src/components/_uswds.njk
@@ -8,5 +8,6 @@
   <body>
     {% block body %}{{ yield }}{% endblock %}
     <script src="{{ uswds.path }}/js/uswds.min.js"></script>
+    <script src="{{ uswds.path }}/components.bundle.js"></script>
   </body>
 </html>
