--- a/src/components/segmented_progress_bar/segmented_progress_bar.njk
+++ b/src/components/segmented_progress_bar/segmented_progress_bar.njk
@@ -1,5 +1,5 @@
 import React from 'react';
-import Modal from './SegmentedProgressBar';
+import SegmentedProgressBar from './SegmentedProgressBar';
 
 export default function SegmentedProgressBarExample(props) {
   return (
