Remove closing component

--- a/src/components/segmented_progress_bar/segmented_progress_bar.njk
+++ b/src/components/segmented_progress_bar/segmented_progress_bar.njk
@@ -5,7 +5,6 @@ export default function SegmentedProgressBarExample(props) {
   return (
     <SegmentedProgressBar
       current={props.current}
-      total={props.total}>
-    </SegmentedProgressBar>
+      total={props.total}/>
   );
 }
