--- a/src/components/tooltip/tooltip.njk
+++ b/src/components/tooltip/tooltip.njk
@@ -4,7 +4,7 @@ import Tooltip from './Tooltip';
 export default function TooltipExample(props) {
   return (
           <Tooltip
-            toolTipText="Tooltip text"
+            {...props}
             tabIndex={1}/>
   );
 }
