--- a/src/components/checkbox/checkbox.njk
+++ b/src/components/checkbox/checkbox.njk
@@ -1,5 +1,5 @@
 import React from 'react';
-import ErrorableCheckbox from './ErrorableCheckbox';
+import ErrorableCheckbox from '../errorable_checkbox/ErrorableCheckbox';
 
 export default function ErrorableCheckboxExample(props) {
   return (
