--- a/src/components/search_menu/search_menu.njk
+++ b/src/components/search_menu/search_menu.njk
@@ -6,7 +6,7 @@ export default function SearchMenuExample(props) {
     <SearchMenu
       title={props.title}
       id={props.id}
-      isOpen={true}
+      isOpen
       clickHandler={() => {}}>
     </SearchMenu>
   );
