--- a/src/components/errorable_checkbox/errorable_checkbox.njk
+++ b/src/components/errorable_checkbox/errorable_checkbox.njk
@@ -4,7 +4,7 @@ import ErrorableCheckbox from './ErrorableCheckbox';
 export default function ErrorableCheckboxExample(props) {
   return (
           <ErrorableCheckbox
-            onValueChange={() => {}}
+            handleChange={() => {}}
             {...props}/>
   );
 }
