--- a/components/detail/header.html
+++ b/components/detail/header.html
@@ -2984,6 +2984,30 @@
         
         
         <li class="Tree-item Tree-entity" data-role="item">
+            <a class="Tree-entityLink" href="search_menu.html" data-pjax>
+                <span>SearchMenu</span>
+                
+
+<div class="Status Status--unlabelled">
+
+<div class="Status-dots">
+
+
+<span class="Status-dot" style="border-color: #FF9233;" title="WIP"></span>
+
+
+</div>
+
+</div>
+
+
+            </a>
+        </li>
+        
+    
+        
+        
+        <li class="Tree-item Tree-entity" data-role="item">
             <a class="Tree-entityLink" href="segmented_progress_bar.html" data-pjax>
                 <span>Segmented progress bar</span>
                 
