--- a/components/detail/segmented_progress_bar.html
+++ b/components/detail/segmented_progress_bar.html
@@ -1758,6 +1758,30 @@ describe(<span class="hljs-string">'&lt;SegmentedProgressBar/&gt;'</span>, () =&
     
         
         
+        <li class="Tree-item Tree-entity" data-role="item">
+            <a class="Tree-entityLink" href="search_menu.html" data-pjax>
+                <span>SearchMenu</span>
+                
+
+<div class="Status Status--unlabelled">
+
+<div class="Status-dots">
+
+
+<span class="Status-dot" style="border-color: #FF9233;" title="WIP"></span>
+
+
+</div>
+
+</div>
+
+
+            </a>
+        </li>
+        
+    
+        
+        
         <li class="Tree-item Tree-entity is-current" data-state="current" data-role="item">
             <a class="Tree-entityLink" href="" data-pjax>
                 <span>Segmented progress bar</span>
