--- a/src/components/08-navigation/navigation.njk
+++ b/src/components/08-navigation/navigation.njk
@@ -260,6 +260,7 @@
 </div>
 
 <script>
+window.dataLayer = [];
 function reportHeaderNav(navpath) {
   window.dataLayer.push({
     event: 'nav-header-link',
