--- a/src/components/_uswds.njk
+++ b/src/components/_uswds.njk
@@ -2,11 +2,11 @@
 <html lang="en-US">
   <head>
     <title>{{ _self.title }}</title>
-    <link rel="stylesheet" href="{{ uswds.path }}/styles.css">
+    <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
     {% block body %}{{ yield }}{% endblock %}
     <script src="https://unpkg.com/uswds/dist/js/uswds.min.js"></script>
-    <script src="{{ uswds.path }}/components.bundle.js"></script>
+    <script src="/components.bundle.js"></script>
   </body>
 </html>
