--- a/src/components/05-alerts/AlertBox/AlertBox.njk
+++ b/src/components/05-alerts/AlertBox/AlertBox.njk
@@ -1,5 +1,5 @@
 import React from 'react';
-import Alertbox from './AlertBox';
+import AlertBox from './AlertBox';
 
 export default function AlertBoxExample(props) {
   return (
