--- a/src/components/05-alerts/AlertBox/AlertBox.njk
+++ b/src/components/05-alerts/AlertBox/AlertBox.njk
@@ -6,6 +6,7 @@ export default function AlertBoxExample(props) {
     <AlertBox
       headline={props.headline}
       content={props.content}
-      status={props.status}/>
+      status={props.status}
+      isVisible={props.isVisible}/>
   );
 }
