--- a/src/components/tooltip/tooltip.njk
+++ b/src/components/tooltip/tooltip.njk
@@ -1,5 +1,5 @@
 import React from 'react';
-import Tooltip from './Tooltip';
+import Tooltip from './tooltip';
 
 export default function TooltipExample(props) {
   return (
