modified breadcrumbs to be generic and take crumbs as props

--- a/src/components/Breadcrumbs/Breadcrumbs.njk
+++ b/src/components/Breadcrumbs/Breadcrumbs.njk
@@ -1,12 +1,10 @@
 import React from 'react';
-import AlertBox from './Breadcrumbs';
+import Breadcrumbs from './Breadcrumbs';
 
 export default function BreadcrumbsExample(props) {
   return (
     <Breadcrumbs
-      headline={props.headline}
-      content={props.content}
-      status={props.status}
-      isVisible={props.isVisible}/>
+      includeSearch={props.includeSearch}
+      crumbs={props.crumbs}/>
   );
 }
