adding l2 and l3 templates, first pass

--- a/src/components/layouts/vets-l3.njk
+++ b/src/components/layouts/vets-l3.njk
@@ -10,6 +10,8 @@ Should display with header, footer, no sidenav
 
 >> Breadcrumbs go here <<
 
+{% include '@sidenav--default' %} ??
+
   <div class="usa-grid" style="padding: 2em">
     <div class="usa-width-one-whole">
 
@@ -17,6 +19,12 @@ Should display with header, footer, no sidenav
 
     </div>
   </div>
+
+<div class="usa-grid">
+
+  PAGINATION GOES HERE
+
+</div>
 
 {% include '@footer' %}
 
