--- a/sass/_shame.scss
+++ b/sass/_shame.scss
@@ -5,7 +5,7 @@
 
 // message while loading react app
 
-.usa-bitter, h1, h2, h3, h4, h5, h6 {
+.usa-bitter, .va-introtext p, h1, h2, h3, h4, h5, h6 {
   font-family: "Bitter", "Georgia", "Cambria", "Times New Roman", "Times", serif;
 }
 
