--- a/src/components/type/typesetting.njk
+++ b/src/components/type/typesetting.njk
@@ -1,30 +1,19 @@
 <div class="usa-grid">
-  <h6 class="usa-heading-alt">Alignment</h6>
-  <div class="alignment-example">
-    <h4>The Grand Canyon</h4>
-    <p>Grand Canyon National Park is the United States' 15th oldest national park. Named a UNESCO World Heritage Site in 1979, the park is located in Arizona.</p>
+  <h1>Heading 1</h1>
+  <h2>Heading 2</h2>
+  <h3>Heading 3</h3>
+  <h4>Heading 4</h4>
+  <h5>Heading 5</h5>
+  <h6>Heading 6</h6>
+
+  <div class='va-introtext'>
+    <p>Class is 'va-introtext' -- Introductory text for a page.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean venenatis laoreet augue scelerisque sollicitudin. Proin sodales sodales posuere. Vivamus nunc enim, ullamcorper vitae facilisis a, fermentum ac diam. Aenean convallis dui id posuere gravida. Suspendisse mattis consectetur velit. Fusce mauris mauris, bibendum ac ex ac, viverra elementum justo. Nulla bibendum leo lobortis elit vehicula, blandit bibendum lectus euismod.</p>
   </div>
 
-  <h6 class="usa-heading-alt">Line length - Desktop</h6>
-  <div class="usa-line-length-example">
-    <p>Yosemite National Park is set within California’s Sierra Nevada mountains. It’s famed for its giant, ancient sequoias, and for Tunnel View, the iconic vista of towering Bridalveil Fall and the granite cliffs of El Capitan and Half Dome.</p>
-    <p class="help-text">75 characters max on desktop</p>
+  <div>
+    <p>This is a standard paragraph.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean venenatis laoreet augue scelerisque sollicitudin. Proin sodales sodales posuere. Vivamus nunc enim, ullamcorper vitae facilisis a, fermentum ac diam. Aenean convallis dui id posuere gravida. Suspendisse mattis consectetur velit. Fusce mauris mauris, bibendum ac ex ac, viverra elementum justo. Nulla bibendum leo lobortis elit vehicula, blandit bibendum lectus euismod.</p>
   </div>
 
-  <h6 class="usa-heading-alt">Spacing</h6>
-
-  <h1>Section heading</h1>
-  <p class="usa-font-lead">Great Smoky Mountains National Park straddles the border of North Carolina and Tennessee.</p>
-
-  <h2>Section heading</h2>
-
-  <h3>Section of the page</h3>
-  <p>The sprawling landscape encompasses lush forests and an abundance of wildflowers that bloom year-round. Streams, rivers and waterfalls appear along hiking routes that include a segment of the Appalachian Trail.</p>
-
-  <h4>Subsection of the page</h4>
-  <p>World renowned for its diversity of plant and animal life, the beauty of its ancient mountains, and the quality of its remnants of Southern Appalachian mountain culture, this is America's most visited national park.</p>
-  <p>Right now scientists think that we only know about 17 percent of the plants and animals that live in the park, or about 17,000 species of a probable 100,000 different organisms.</p>
-
-  <h5>Subsection of the page</h5>
-  <p>Entrance to Great Smoky Mountains National Park is free. The park is one of the few national parks where no entrance fees are charged.</p>
 </div>
