--- a/src/components/type/typesetting.njk
+++ b/src/components/type/typesetting.njk
@@ -1,19 +1,11 @@
 <div class="usa-grid">
-  <h1>Heading 1</h1>
-  <h2>Heading 2</h2>
-  <h3>Heading 3</h3>
-  <h4>Heading 4</h4>
-  <h5>Heading 5</h5>
-  <h6>Heading 6</h6>
 
-  <div class='va-introtext'>
-    <p>Class is 'va-introtext' -- Introductory text for a page.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean venenatis laoreet augue scelerisque sollicitudin. Proin sodales sodales posuere. Vivamus nunc enim, ullamcorper vitae facilisis a, fermentum ac diam. Aenean convallis dui id posuere gravida. Suspendisse mattis consectetur velit. Fusce mauris mauris, bibendum ac ex ac, viverra elementum justo. Nulla bibendum leo lobortis elit vehicula, blandit bibendum lectus euismod.</p>
-  </div>
-
-  <div>
-    <p>This is a standard paragraph.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean venenatis laoreet augue scelerisque sollicitudin. Proin sodales sodales posuere. Vivamus nunc enim, ullamcorper vitae facilisis a, fermentum ac diam. Aenean convallis dui id posuere gravida. Suspendisse mattis consectetur velit. Fusce mauris mauris, bibendum ac ex ac, viverra elementum justo. Nulla bibendum leo lobortis elit vehicula, blandit bibendum lectus euismod.</p>
-  </div>
+  {% if( name != 'Intro Text') and  (name != 'Standard paragraph') %}
+    <{{ name }}>{{ label }}</{{ name }}>
+  {% else %}
+    <div class="{{ class }}">
+      <p>{{ label }}</p>
+    </div>
+  {% endif %}
 
 </div>
