changed button view to collated and removed 'default' as an option

--- a/src/components/buttons/buttons.njk
+++ b/src/components/buttons/buttons.njk
@@ -1,5 +1,5 @@
 
-<button class="{{ classes }}">Default</button>
+<button class="{{ classes }}">{{ label }}</button>
 {% if (category != 'disabled') and (category != 'big') %}
 <button class="{{ classes }} usa-button-active">Active</button>
 <button class="{{ classes }} usa-button-hover">Hover</button>
