updated dependencies; removed window.VetsGov references from CollapsiblePanel -- it's part of a global helper we'll need to bring in to the design system at some point.

--- a/src/components/CollapsiblePanel/CollapsiblePanel.njk
+++ b/src/components/CollapsiblePanel/CollapsiblePanel.njk
@@ -6,7 +6,7 @@ export default function CollapsiblePanelExample(props) {
     <div>
       <CollapsiblePanel
         panelName={props.panelName}>
-        <div>Some content goes here.</div>
+        <div>This panel defaults to closed.</div>
       </CollapsiblePanel>
 
       <CollapsiblePanel
