--- a/components/detail/modal.html
+++ b/components/detail/modal.html
@@ -325,15 +325,17 @@ modal is opened</td>
             <label class="FileBrowser-select-label" for="filebrowser-select">File:</label>
             <select class="FileBrowser-select" id="filebrowser-select">
                 
-                <option value="file-483588115f1b8ec7051c2e0eb71cd5be">Modal.jsx</option>
+                <option value="file-8f955c050efe1f95e29461afba530bbb">Modal.jsx</option>
                 
-                <option value="file-e312d8241f519ad161eac6822a5ec540">Modal.unit.spec.jsx</option>
+                <option value="file-4f3b6d8d5f282daac2367b06bf96b8d8">Modal.jsx.orig</option>
+                
+                <option value="file-c0357e8ccb3fc255931d9fe607ddb623">Modal.unit.spec.jsx</option>
                 
             </select>
         </div>
 
         
-        <div class="FileBrowser-item is-active" id="file-483588115f1b8ec7051c2e0eb71cd5be" data-role="resource-preview">
+        <div class="FileBrowser-item is-active" id="file-8f955c050efe1f95e29461afba530bbb" data-role="resource-preview">
             <ul class="Meta">
                 <li class="Meta-item">
                     <strong class="Meta-key">Content:</strong>
@@ -500,7 +502,34 @@ Modal.defaultProps = {
             </ul>
         </div>
         
-        <div class="FileBrowser-item" id="file-e312d8241f519ad161eac6822a5ec540" data-role="resource-preview">
+        <div class="FileBrowser-item" id="file-4f3b6d8d5f282daac2367b06bf96b8d8" data-role="resource-preview">
+            <ul class="Meta">
+                <li class="Meta-item">
+                    <strong class="Meta-key">Content:</strong>
+                    <span class="Meta-value">
+                        <div class="FileBrowser-itemPreview">
+                            
+                            <p><em>Previews are currently not available for this file type.</em></p>
+                            
+                        </div>
+                    </span>
+                </li>
+                <li class="Meta-item">
+                    <strong class="Meta-key">URL:</strong>
+                    <span class="Meta-value"><a data-no-pjax href="../raw/modal/Modal.jsx.orig"><span>/components/raw/modal/Modal.jsx.orig</span></a></span>
+                </li>
+                <li class="Meta-item">
+                    <strong class="Meta-key">Filesystem Path:</strong>
+                    <span class="Meta-value">src/components/modal/Modal.jsx.orig</span>
+                </li>
+                <li class="Meta-item">
+                    <strong class="Meta-key">Size:</strong>
+                    <span class="Meta-value">3.8 KB</span>
+                </li>
+            </ul>
+        </div>
+        
+        <div class="FileBrowser-item" id="file-c0357e8ccb3fc255931d9fe607ddb623" data-role="resource-preview">
             <ul class="Meta">
                 <li class="Meta-item">
                     <strong class="Meta-key">Content:</strong>
