--- a/styles.css
+++ b/styles.css
@@ -11982,6 +11982,17 @@ body.va-pos-fixed {
   margin-bottom: 1em;
 }
 
+.usa-bitter,
+.va-introtext p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Bitter", "Georgia", "Cambria", "Times New Roman", "Times", serif;
+}
+
 .loading-message {
   padding: 2em 0;
   text-align: center;
