--- a/src/components/_uswds.njk
+++ b/src/components/_uswds.njk
@@ -7,6 +7,6 @@
   <body>
     {% block body %}{{ yield }}{% endblock %}
     <script src="https://unpkg.com/uswds/dist/js/uswds.min.js"></script>
-    <script src="/components.bundle.js"></script>
+    <script src="{{ assetPath }}components.bundle.js"></script>
   </body>
 </html>
