--- a/components/detail/breadcrumbs.html
+++ b/components/detail/breadcrumbs.html
@@ -300,7 +300,6 @@
 
 <span class="hljs-class"><span class="hljs-keyword">class</span> <span class="hljs-title">Breadcrumbs</span> <span class="hljs-keyword">extends</span> <span class="hljs-title">React</span>.<span class="hljs-title">Component</span> </span>{
   render() {
-
     <span class="hljs-keyword">const</span> crumbs = <span class="hljs-keyword">this</span>.props.crumbs;
     <span class="hljs-keyword">return</span> (
       <span class="xml"><span class="hljs-tag">&lt;<span class="hljs-name">nav</span> <span class="hljs-attr">className</span>=<span class="hljs-string">"va-nav-breadcrumbs"</span>&gt;</span>
@@ -338,7 +337,7 @@ Breadcrumbs.propTypes = {
                 </li>
                 <li class="Meta-item">
                     <strong class="Meta-key">Size:</strong>
-                    <span class="Meta-value">689 Bytes</span>
+                    <span class="Meta-value">688 Bytes</span>
                 </li>
             </ul>
         </div>
@@ -353,7 +352,7 @@ Breadcrumbs.propTypes = {
                             <code class="Code Code--lang-JSX FileBrowser-code">
                                 <pre><span class="hljs-keyword">import</span> React <span class="hljs-keyword">from</span> <span class="hljs-string">'react'</span>;
 <span class="hljs-keyword">import</span> { shallow } <span class="hljs-keyword">from</span> <span class="hljs-string">'enzyme'</span>;
-<span class="hljs-keyword">import</span> { axeCheck } <span class="hljs-keyword">from</span> <span class="hljs-string">'../../../lib/testing/helpers'</span>;
+<span class="hljs-keyword">import</span> { axeCheck } <span class="hljs-keyword">from</span> <span class="hljs-string">'../../../../lib/testing/helpers'</span>;
 <span class="hljs-keyword">import</span> { expect } <span class="hljs-keyword">from</span> <span class="hljs-string">'chai'</span>;
 
 <span class="hljs-keyword">import</span> Breadcrumbs <span class="hljs-keyword">from</span> <span class="hljs-string">'./Breadcrumbs.jsx'</span>;
