--- a/components/detail/errorableradiobuttons.html
+++ b/components/detail/errorableradiobuttons.html
@@ -418,7 +418,7 @@ export <span class="hljs-keyword">default</span> function <span class="hljs-type
 <span class="hljs-keyword">import</span> _ <span class="hljs-keyword">from</span> <span class="hljs-string">'lodash'</span>;
 <span class="hljs-keyword">import</span> classNames <span class="hljs-keyword">from</span> <span class="hljs-string">'classnames'</span>;
 
-<span class="hljs-keyword">import</span> ToolTip <span class="hljs-keyword">from</span> <span class="hljs-string">'../../../Tooltip/Tooltip'</span>;
+<span class="hljs-keyword">import</span> ToolTip <span class="hljs-keyword">from</span> <span class="hljs-string">'../../../tooltip/Tooltip'</span>;
 <span class="hljs-keyword">import</span> ExpandingGroup <span class="hljs-keyword">from</span> <span class="hljs-string">'../ExpandingGroup/ExpandingGroup'</span>;
 
 <span class="hljs-keyword">import</span> { makeField } <span class="hljs-keyword">from</span> <span class="hljs-string">'../../../../helpers/fields'</span>;
