--- a/src/components/navigation/Pagination/Pagination.njk
+++ b/src/components/navigation/Pagination/Pagination.njk
@@ -4,7 +4,11 @@ import Pagination from './Pagination';
 export default function PaginationExample(props) {
   return (
     <Pagination
-      includeSearch={props.includeSearch}
-      crumbs={props.crumbs}/>
+      onPageSelect={props.onPageSelect}
+      page={props.page}
+      pages={props.pages}
+      maxPageListLength={props.maxPageListLength}
+      showLastPage={props.showLastPage}
+      />
   );
 }
