fixed first test for pagination

--- a/src/components/navigation/Pagination/Pagination.njk
+++ b/src/components/navigation/Pagination/Pagination.njk
@@ -4,7 +4,7 @@ import Pagination from './Pagination';
 export default function PaginationExample(props) {
   return (
     <Pagination
-      onPageSelect={props.onPageSelect}
+      onPageSelect={(e) => {}}
       page={props.page}
       pages={props.pages}
       maxPageListLength={props.maxPageListLength}
