--- a/src/components/form/controls/ErrorableCheckbox/ErrorableCheckbox.njk
+++ b/src/components/form/controls/ErrorableCheckbox/ErrorableCheckbox.njk
@@ -4,7 +4,8 @@ import ErrorableCheckbox from './ErrorableCheckbox';
 export default function ErrorableCheckboxExample(props) {
   return (
           <ErrorableCheckbox
-            onChange={(e) => {e.target.checked}}
+            label='Errorable Checkbox'
+            onValueChange={(e) => {e.target.checked}}
             {...props}/>
   );
 }
