errorabledate renders; CSS is broken but this is true across the system

--- a/src/components/form/controls/ErrorableDate/ErrorableDate.njk
+++ b/src/components/form/controls/ErrorableDate/ErrorableDate.njk
@@ -4,6 +4,8 @@ import ErrorableDate from './ErrorableDate';
 export default function ErrorableDateExample(props) {
   return (
     <ErrorableDate
-      thing={props.thing}
-  />)
+      label={props.label}
+      onValueChange={(e) => {e.target.checked}}
+      {...props}
+    />);
 }
