dropdown panel works

--- a/src/components/navigation/DropDownPanel/DropDownPanel.njk
+++ b/src/components/navigation/DropDownPanel/DropDownPanel.njk
@@ -6,7 +6,8 @@ export default function DropDownPanelExample(props) {
     <DropDownPanel
       buttonText={props.buttonText}
       cssClass={props.cssClass}
-      contents={props.contents}
       isOpen={props.isOpen}
-  />);
+      contents={props.contents}
+      clickHandler={(e) => {}}
+    />);
 }
