removed _duplicates; it was tripping Fractal up.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,6 +48,7 @@
 @import "~uswds/src/stylesheets/components/alerts";
 @import "~uswds/src/stylesheets/components/forms";
 @import "~uswds/src/stylesheets/components/sidenav";
+@import "~uswds/src/stylesheets/components/banner";
 
 // ----- VA BASE (VARIABLES/HELPERS) ---- //
 @import "base/b-element-overrides";
