--- a/src/components/header/HelpMenu/HelpMenu.njk
+++ b/src/components/header/HelpMenu/HelpMenu.njk
@@ -1,11 +1,11 @@
 import React from 'react';
-import SearchMenu from './HelpMenu';
+import HelpMenu from './HelpMenu';
 
 export default function HelpMenuExample(props) {
   return (
     <HelpMenu
       {...props}
-      clickHandler={() => {}}>  
+      clickHandler={() => {}}>
     </HelpMenu>
   );
 }
