--- a/src/components/colors/colors.njk
+++ b/src/components/colors/colors.njk
@@ -1,35 +1,20 @@
-{% for variant in variants %}
+<!-- do you render {{ family }} -->
 
-<section>
-  <h1>{{ type }}</h1>
-  <div>
-    <h2>{{ name }}</h2>
-    <h3>Hex: {{ hex }}</h3>
-    <h3>Contrast: {{ contrast }}</h3>
-    <div class='swatch-sample {{ var }}'>
-    </div> <!-- the color swatch itself -->
+{% for f in family %}
 
-  </div> <!-- swatch container -->
-</section> <!-- family container -->
+<section class='palette-container'>
+  <h3>{{ f.name }}</h3>
+  <p>Colors: {{ f.color }}</p>
 
-{% endfor %}
+  {% for c in f.color %}
 
-<!--
-{% for family in family %}
-
-<div class='row'>
-  <h1> {{ family.name }} </h2>
-
-  {% for color in family.color %}
-
-    <div class='fr-color-family {{ color.var }}'>
-      <h2>{{ color.name }}</h2>
-      <p>Hex: {{ color.hex }}</p>
-      <p>Contrast rating: {{ color.contrast }}
-    </div>
+  <div class='palette-swatch'>
+    <h4>{{ c.name }}</h4>
+    {{ c.name }}<br>
+    {{ c. hex }}
+  </div>
 
   {% endfor %}
 
-  </div>
+</section>
 {% endfor %}
--->
