--- a/sass/_fractal.scss
+++ b/sass/_fractal.scss
@@ -1,4 +1,4 @@
-// additional-variables
+// additional variables
 $color-gold-darker: #988530;
 
 .palette-container {
@@ -6,9 +6,9 @@ $color-gold-darker: #988530;
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(4, 24%);
-  grid-auto-flow: column;
+  grid-auto-flow: row;
   height: auto;
-  border: 1px solid hotpink;
+  padding-bottom:30px;
 
   .palette-swatch {
     border: 1px solid $color-gray-warm-light;
@@ -17,7 +17,7 @@ $color-gold-darker: #988530;
     .swatch {
       display: inline-block;
       width:100%;
-      height:200px;
+      height:70px;
 
       &.color-link-default {
         background-color: $color-link-default;
