--- a/src/components/form/templates/address-form.njk
+++ b/src/components/form/templates/address-form.njk
@@ -1,4 +1,4 @@
-
+<div class='usa-grid usa-width-one-whole'>
   <form class="usa-form-large">
     <fieldset>
       <legend>Mailing address</legend>
@@ -77,3 +77,4 @@
       <input class="usa-input-medium" id="zip" name="zip" type="text" pattern="[\d]{5}(-[\d]{4})?">
     </fieldset>
   </form>
+</div>
