--- a/src/components/form/templates/name-form.njk
+++ b/src/components/form/templates/name-form.njk
@@ -1,4 +1,4 @@
-
+<div class='usa-grid usa-width-one-whole'>
   <form class="usa-form">
     <fieldset>
       <legend>Name</legend>
@@ -18,3 +18,4 @@
       <input class="usa-input-tiny" id="suffix" name="suffix" type="text">
     </fieldset>
   </form>
+</div>
