responded to comments in PR

--- a/src/components/form/templates/address-form.njk
+++ b/src/components/form/templates/address-form.njk
@@ -1,4 +1,4 @@
-<div class='usa-grid usa-width-one-whole'>
+  <div class="usa-grid usa-width-one-whole">
   <form class="usa-form-large">
     <fieldset>
       <legend>Mailing address</legend>
