--- a/src/components/alerts/AlertBox/AlertBox.njk
+++ b/src/components/alerts/AlertBox/AlertBox.njk
@@ -3,10 +3,28 @@ import AlertBox from './AlertBox';
 
 export default function AlertBoxExample(props) {
   return (
-    <AlertBox
-      headline={props.headline}
-      content={props.content}
-      status={props.status}
-      isVisible={props.isVisible}/>
+    <div className="usa-width-one-whole">
+      <AlertBox
+        headline={props.headline}
+        content={props.content}
+        status={props.status}
+        isVisible={props.isVisible}/>
+
+      <AlertBox
+        headline={props.headline}
+        content={props.content}
+        status={'error'}
+        isVisible={props.isVisible}/>
+      <AlertBox
+        headline={props.headline}
+        content={props.content}
+        status={'success'}
+        isVisible={props.isVisible}/>
+      <AlertBox
+        headline={props.headline}
+        content={props.content}
+        status={'info'}
+        isVisible={props.isVisible}/>
+    </div>
   );
 }
