--- a/sass/_shame.scss
+++ b/sass/_shame.scss
@@ -5,15 +5,46 @@
 
 // message while loading react app
 
-.usa-bitter, .va-introtext p, h1, h2, h3, h4, h5, h6 {
+.usa-bitter,
+.va-introtext p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Bitter", "Georgia", "Cambria", "Times New Roman", "Times", serif;
+}
+
+// Block form elements
+/* stylelint-disable selector-no-qualifying-type */
+input,
+textarea,
+select {
+  -webkit-appearance: none;
+  border: $input-border-width solid $color-gray;
+  border-radius: 0;
+  box-sizing: border-box;
+  color: $color-base; // standardize on firefox
+  display: block;
+  font-size: $base-font-size;
+  height: $input-height;
+  line-height: $input-line-height;
+  margin: 0.2em 0;
+  max-width: $input-max-width;
+  outline: none;
+  padding: $input-padding-vertical 0.7em;
+  width: 100%;
+
+  &.usa-input-success {
+    border: 3px solid $color-green-light;
+  }
 }
 
 .loading-message {
   padding: 2em 0;
   text-align: center;
 }
-
 
 body {
   .row {
@@ -82,6 +113,9 @@ body {
 
 .usa-input-error {
   select {
+    -webkit-appearance: none;
+    padding-top: 3px;
+    padding-bottom: 3px;
     border: 3px solid $color-secondary-dark;
     width: calc(100% + 1.5rem);
   }
@@ -142,12 +176,12 @@ body {
     background-image: url("/img/arrow-down-white.svg");
     background-position: right bottom;
     background-repeat: no-repeat;
-    background-size: .6em auto;
+    background-size: 0.6em auto;
     content: ""; // Add content for accessibility purposes?
     display: inline-block;
     height: 1em;
-    margin-left: .5em;
-    margin-right: -.3em;
+    margin-left: 0.5em;
+    margin-right: -0.3em;
     text-indent: -9999em;
     width: 1em;
   }
@@ -194,7 +228,7 @@ body {
 // See: https://github.com/18F/web-design-standards/issues/1899
 // ===========================================
 
-@include media($medium-large-screen)  {
+@include media($medium-large-screen) {
   .usa-grid {
     .usa-width-one-fourth {
       margin-right: 2.35765%;
@@ -211,7 +245,8 @@ body {
 // At some point between 0.10 and 1.4, USWDS modified radio/checkbox style
 // so be position: absolute, and left: -999em. This isn't compatible with our
 // e2e test cases, because Nightwatch can't find the elements on screen.
-input[type="checkbox"], input[type="radio"] {
+input[type="checkbox"],
+input[type="radio"] {
   margin-left: -2rem;
   opacity: 0;
   position: absolute;
@@ -222,14 +257,14 @@ input[type="checkbox"], input[type="radio"] {
 // [hidden] { display: none !important; }
 // However, some apps set the property to false and expect the element to be visible.
 // So, we do this shameful override to get around it.
-[hidden=false]{
+[hidden="false"] {
   display: block !important;
 }
 
 // USWDS adds an increased margin for submit buttons, which break out grid display when we have a
 // back button on the left and a submit on the right.
 form {
-  [type=submit] {
+  [type="submit"] {
     @include media($medium-screen) {
       padding-left: 2rem;
       padding-right: 2rem;
@@ -254,14 +289,11 @@ form {
 }
 
 #hurricane-warning-container {
-
   width: 100%;
   background-color: $color-gibill-accent;
-
 }
 
 #hurricane-warning {
-
   max-width: 62.5em;
   margin: 0 auto;
 
@@ -270,7 +302,6 @@ form {
     text-align: left;
 
     .usa-alert-heading {
-
       margin: 0 auto;
       padding: 0;
     }
