--- a/src/components/header/search/search.njk
+++ b/src/components/header/search/search.njk
@@ -8,7 +8,7 @@
           <label class="usa-sr-only" for="search-field-big">Search big</label>
           <input id="search-field-big" type="search" name="search">
           <button type="submit">
-            <span class="usa-search-submit-text">Search</span>
+            <span class="usa-search-submit-text"></span>
           </button>
         </form>
       </div>
@@ -24,7 +24,7 @@
           <label class="usa-sr-only" for="search-field">Search medium</label>
           <input id="search-field" type="search" name="search">
           <button type="submit">
-            <span class="usa-search-submit-text">Search</span>
+            <span class="usa-sr-only"></span>
           </button>
         </form>
       </div>
@@ -40,7 +40,7 @@
           <label class="usa-sr-only" for="search-field-small">Search small</label>
           <input id="search-field-small" type="search" name="search">
           <button type="submit">
-            <span class="usa-sr-only">Search</span>
+            <span class="usa-sr-only"></span>
           </button>
         </form>
       </div>
