--- a/src/components/svgicons/svgicons.njk
+++ b/src/components/svgicons/svgicons.njk
@@ -12,8 +12,8 @@
   <tbody>
   {% for i in c.icon %}
     <tr>
-        <th scope="row">icon here {{ i.id }}</th>
-        <td>{{ i.id }} | {{ i.html }}</td>
+        <th scope="row"><i class="fa {{i.id}}"></i></th>
+        <td>{{ i.id }} | <code>{{ i.html | escape }}</code></td>
         <td>{{ i.usage }}</td>
     </tr>
   {% endfor %}
