--- a/src/components/svgicons/svgicons.njk
+++ b/src/components/svgicons/svgicons.njk
@@ -5,7 +5,8 @@
   <thead>
     <tr>
         <th scope="col">Icon</th>
-        <th scope="col">ID</th>
+        <th scope="col">CSS Class</th>
+        <th scope="col">Unicode</th>
         <th scope="col">Usage</th>
     </tr>
   </thead>
@@ -13,7 +14,8 @@
   {% for i in c.icon %}
     <tr>
         <th scope="row"><i class="fa {{i.id}}"></i></th>
-        <td>{{ i.id }} | <code>{{ i.html | escape }}</code></td>
+        <td>{{ i.id }}</td>
+        <td><code class='code-fa'>{{ i.html | escape }}</code></td>
         <td>{{ i.usage }}</td>
     </tr>
   {% endfor %}
