--- a/src/sass/base/_va.scss
+++ b/src/sass/base/_va.scss
@@ -621,9 +621,11 @@ ol {
       display: inline-block;
       padding: 0 0.35em;
     }
+
     &:last-child:after {
       content: "";
     }
+
     &.active {
       font-weight: bold;
       padding: 0.3em 0;
@@ -633,6 +635,7 @@ ol {
       }
     }
   }
+
   a {
     color: $color-link-default;
     display: inline-block;
@@ -642,11 +645,27 @@ ol {
       background: $color-link-default-hover;
     }
   }
+
+  a[aria-current="page"] {
+    color: $color-gray-dark !important;
+    cursor: default;
+    font-weight: bold;
+    pointer-events: none;
+    text-decoration: none;
+  }
 }
 
 .va-nav-breadcrumbs-list {
-  float: none;
+  float: none !important;
   position: relative;
+}
+
+.va-nav-breadcrumbs-list__mobile-link {
+  &::before {
+    content: " \2039 ";
+    display: inline-block;
+    padding: 0 0.15em;
+  }
 }
 
 //===== Playbook and Facility Locator
@@ -1476,4 +1495,3 @@ p.info-message {
     color: #fff;
   }
 }
-
