Clean up header components, remove old styles (#105)

--- a/src/sass/site.scss
+++ b/src/sass/site.scss
@@ -18,5 +18,7 @@
 @import "shame";
 @import "modules/m-modal";
 @import "modules/m-progress-bar";
+@import "modules/va-pagination";
+@import "modules/va-tabs";
 @import "color-palette";
 @import "icons";
