add override and errorableRadioInput component

--- a/src/sass/core.scss
+++ b/src/sass/core.scss
@@ -62,3 +62,6 @@
 
 // ----- VA GENERAL (MAIN FILE/OTHER) ---- //
 @import "base/va";
+
+// ----- USWDS OVERRIDE ----- //
+@import "overrides/uswds/focus"
