commenting out css for color-coded status icons

--- a/src/sass/site/style.fractal.scss
+++ b/src/sass/site/style.fractal.scss
@@ -32,10 +32,10 @@ $color-gray-lightest: #f1f1f1;
   background-color: $color-white;
 }
 
-.Tree {
+/* .Tree {
   border:1px solid orange;
 
   .Status-dots {
     border:1px solid red;
   }
-}
+} */
